--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -896,8 +896,36 @@
 	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Relaciona sinònims a la cerca difusa. No es pot utilitzar amb l'opció \"Relacions\".",
 	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Coincidir amb sinònims",
 	"widget.generator.advanced.search-and-filtering-category.title": "Cerca i filtratge",
+	"widget.generator.advanced.selected-preset.edited": "(editat)",
+	"widget.generator.advanced.selected-preset.label": "Model actual:",
 	"widget.generator.configuration": "Configuració del widget",
 	"widget.generator.page-title": "Configuració del widget",
+	"widget.generator.presets.ask.long-description": "Aquesta és la modalitat popularitzada per ChatGPT, on l'usuari fa una pregunta i obté una resposta. El sistema aprofita els resultats de la cerca de l'experiència \"Troba\" per crear un context coherent que serà utilitzat per un gran model de llenguatge per generar la resposta. L'usuari pot fer preguntes de seguiment per obtenir més informació.",
+	"widget.generator.presets.ask.short-description": "Obteniu una resposta",
+	"widget.generator.presets.ask.title": "Preguntar",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "La resposta i els resultats de la cerca relacionats",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Només la resposta",
+	"widget.generator.presets.ask.what-to-show.question": "Què vols mostrar?",
+	"widget.generator.presets.ask.what-to-show.title": "Sortida de resposta",
+	"widget.generator.presets.copilot.create-copilot-button": "Crea un copilota AI",
+	"widget.generator.presets.copilot.description": "Un agent LLM, també anomenat copilot d'IA, no només ha de poder interactuar amb un usuari mitjançant una conversa semblant a un humà, sinó que també es comporta segons un objectiu determinat. Afectarà el seu to, el seu estil, el seu vocabulari, el seu domini d'experiència o fins i tot les seves opinions.",
+	"widget.generator.presets.copilot.question": "Vols definir un copilota AI?",
+	"widget.generator.presets.copilot.title": "Copilota AI",
+	"widget.generator.presets.description": "Seleccioneu un dels valors predefinits o personalitzeu el vostre a la pestanya \"Avançat\".",
+	"widget.generator.presets.discover.long-description": "En aquesta experiència, l'usuari no sap què vol trobar. Volen explorar un tema i descobrir informació relacionada. El descobriment posa de manifest peces relacionades de coneixement, informació, dades i fonts mitjançant tècniques de gràfics.",
+	"widget.generator.presets.discover.short-description": "Explorar un corpus",
+	"widget.generator.presets.discover.title": "Descobrir (beta)",
+	"widget.generator.presets.find.long-description": "En aquesta experiència, l'usuari busca una informació específica dins d'un recurs o document. Això requereix retornar el bloc de text on es troba la informació. Aquesta experiència se situa a la part superior de l'experiència de cerca estàndard descrita anteriorment, però també implicarà una cerca semàntica. L'usuari pot explicar què està buscant en llenguatge natural, i el sistema intentarà entendre la seva intenció i trobar la informació rellevant.",
+	"widget.generator.presets.find.short-description": "Trobeu informació exacta en un corpus gran",
+	"widget.generator.presets.find.title": "Troba",
+	"widget.generator.presets.search.long-description": "Aquesta és l'experiència de cerca més bàsica. L'usuari vol trobar un document que parli d'un tema específic proporcionat com a conjunt de paraules clau. L'usuari pot reduir els resultats filtrant i classificant. Això és el que fan la majoria dels motors de cerca avui dia.",
+	"widget.generator.presets.search.short-description": "Recuperar recursos",
+	"widget.generator.presets.search.title": "Cerca",
+	"widget.generator.presets.search-experience": "Experiència de cerca",
+	"widget.generator.presets.widget-location.application": "Una aplicació específica o un repositori de documents",
+	"widget.generator.presets.widget-location.public": "Un lloc web públic",
+	"widget.generator.presets.widget-location.question": "On es trobarà aquest giny de cerca?",
+	"widget.generator.presets.widget-location.title": "Ubicació del widget",
 	"widget.generator.preview": "Vista prèvia",
 	"widget.generator.private-kb-warning.description": "Si el contingut del Knowledge Box ha de ser públic, podeu publicar-lo des de",
 	"widget.generator.private-kb-warning.link": "Pàgina inicial",
@@ -907,6 +935,6 @@
 	"widget.generator.publish_kb_link": "Panell",
 	"widget.generator.snippet": "Fragment de codi",
 	"widget.generator.tabs.advanced": "Avançat",
-	"widget.generator.tabs.presets": "Preseleccions",
+	"widget.generator.tabs.presets": "Models preestablerts",
 	"widget.show-api": "Mostra el punt final de l'API"
 }
