--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -897,8 +897,36 @@
 	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Finden Sie Synonyme in der Fuzzy-Suche. Es kann nicht mit der Option „Beziehungen“ verwendet werden.",
 	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Passen Sie Synonyme an",
 	"widget.generator.advanced.search-and-filtering-category.title": "Suchen und Filtern",
+	"widget.generator.advanced.selected-preset.edited": "(bearbeitet)",
+	"widget.generator.advanced.selected-preset.label": "Aktuelle Voreinstellung:",
 	"widget.generator.configuration": "Widget-Konfiguration",
 	"widget.generator.page-title": "Widget-Konfiguration",
+	"widget.generator.presets.ask.long-description": "Dies ist die von ChatGPT populär gemachte Modalität, bei der der Benutzer eine Frage stellt und eine Antwort erhält. Das System nutzt die Suchergebnisse der „Finden“-Erfahrung, um einen konsistenten Kontext zu erstellen, der von einem großen Sprachmodell zum Generieren der Antwort verwendet wird. Der Benutzer kann Folgefragen stellen, um weitere Informationen zu erhalten.",
+	"widget.generator.presets.ask.short-description": "Eine Antwort bekommen",
+	"widget.generator.presets.ask.title": "Fragen",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "Die Antwort und die zugehörigen Suchergebnisse",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Nur die Antwort",
+	"widget.generator.presets.ask.what-to-show.question": "Was möchtest du zeigen?",
+	"widget.generator.presets.ask.what-to-show.title": "Antwortausgabe",
+	"widget.generator.presets.copilot.create-copilot-button": "Einen AI-Kopiloten erstellen",
+	"widget.generator.presets.copilot.description": "Ein LLM-Agent, auch KI-Kopilot genannt, soll nicht nur in der Lage sein, mit einem Nutzer durch eine menschenähnliche Konversation zu interagieren, sondern sich auch entsprechend einem vorgegebenen Ziel zu verhalten. Er wird seinen Tonfall, seinen Stil, sein Vokabular, sein Fachgebiet oder sogar seine Meinung beeinflussen.",
+	"widget.generator.presets.copilot.question": "Möchten Sie einen KI-Copiloten definieren?",
+	"widget.generator.presets.copilot.title": "KI-CoPilot",
+	"widget.generator.presets.description": "Wählen Sie eine der Voreinstellungen aus oder passen Sie Ihre eigene auf der Registerkarte „Erweitert“ an.",
+	"widget.generator.presets.discover.long-description": "Bei dieser Erfahrung weiß der Benutzer nicht, was er finden möchte. Sie möchten ein Thema erkunden und verwandte Informationen entdecken. Discovery deckt verwandte Wissensbereiche, Informationen, Daten und Quellen mithilfe von Diagrammtechniken auf.",
+	"widget.generator.presets.discover.short-description": "Erkunden Sie einen Korpus",
+	"widget.generator.presets.discover.title": "Entdecken (beta)",
+	"widget.generator.presets.find.long-description": "Bei dieser Erfahrung sucht der Benutzer nach einer bestimmten Information in einer Ressource oder einem Dokument. Dies erfordert die Rückgabe des Textblocks, in dem die Informationen gefunden werden. Diese Erfahrung basiert auf der oben beschriebenen Standardsucherfahrung, umfasst aber auch eine semantische Suche. Der Benutzer kann in natürlicher Sprache erklären, wonach er sucht, und das System versucht, seine Absicht zu verstehen und die relevanten Informationen zu finden.",
+	"widget.generator.presets.find.short-description": "Finden Sie genaue Informationen in einem großen Korpus",
+	"widget.generator.presets.find.title": "Finden",
+	"widget.generator.presets.search.long-description": "Dies ist die einfachste Sucherfahrung. Der Benutzer möchte ein Dokument finden, das sich mit einem bestimmten Thema befasst und eine Reihe von Schlüsselwörtern bereitstellt. Der Benutzer kann die Ergebnisse durch Filterung und Rangfolge eingrenzen. Das ist es, was die meisten Suchmaschinen heute tun.",
+	"widget.generator.presets.search.short-description": "Ressourcen abrufen",
+	"widget.generator.presets.search.title": "Suche",
+	"widget.generator.presets.search-experience": "Sucherlebnis",
+	"widget.generator.presets.widget-location.application": "Eine bestimmte Anwendung oder ein Dokumenten-Repository",
+	"widget.generator.presets.widget-location.public": "Eine öffentliche Website",
+	"widget.generator.presets.widget-location.question": "Wo wird sich dieses Such-Widget befinden?",
+	"widget.generator.presets.widget-location.title": "Widget-Standort",
 	"widget.generator.preview": "Vorschau",
 	"widget.generator.private-kb-warning.description": "Wenn der Inhalt der Knowledge Box öffentlich sein soll, können Sie ihn über veröffentlichen",
 	"widget.generator.private-kb-warning.link": "Startseite",
