--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -897,8 +897,36 @@
 	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Match synonyms in fuzzy search. It cannot be used with the \"Relations\" option.",
 	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Match synonyms",
 	"widget.generator.advanced.search-and-filtering-category.title": "Search & filtering",
+	"widget.generator.advanced.selected-preset.edited": "(edited)",
+	"widget.generator.advanced.selected-preset.label": "Current preset:",
 	"widget.generator.configuration": "Widget configuration",
 	"widget.generator.page-title": "Widget configuration",
+	"widget.generator.presets.ask.long-description": "This is the modality made popular by ChatGPT, where the user asks a question and gets an answer. The system leverages the \"Find\" experience search results to build a consistent context that will be used by a large language model to generate the answer. The user can ask follow-up questions to get more information.",
+	"widget.generator.presets.ask.short-description": "Get an answer",
+	"widget.generator.presets.ask.title": "Ask",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "The answer and the related search results",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Only the answer",
+	"widget.generator.presets.ask.what-to-show.question": "What do you want to show?",
+	"widget.generator.presets.ask.what-to-show.title": "Answer output",
+	"widget.generator.presets.copilot.create-copilot-button": "Create an AI copilot",
+	"widget.generator.presets.copilot.description": "An LLM agent – also called AI copilot – is meant to not only be able to interact with a user through a human-like conversation, but also to behave according to a given goal. It will impact its tone, its style, its vocabulary, its domain of expertise, or even its opinions.",
+	"widget.generator.presets.copilot.question": "Do you want to define an AI Copilot?",
+	"widget.generator.presets.copilot.title": "AI Copilot",
+	"widget.generator.presets.description": "Select one of the presets or customize your own in the \"Advanced\" tab.",
+	"widget.generator.presets.discover.long-description": "In this experience, the user does not know what they want to find. They want to explore a topic and discover related information. Discovery surfaces related pieces of knowledge, information, data, and sources using graph techniques.",
+	"widget.generator.presets.discover.short-description": "Explore a corpus",
+	"widget.generator.presets.discover.title": "Discover (beta)",
+	"widget.generator.presets.find.long-description": "In this experience, the user is looking for a specific piece of information inside a resource or document. This requires returning the text block where the information is found. This experience sits on top of the standard search experience described above but will also involve semantic search. The user can explain what they are looking for in natural language, and the system will try to understand their intent and find the relevant information.",
+	"widget.generator.presets.find.short-description": "Find exact information in a large corpus",
+	"widget.generator.presets.find.title": "Find",
+	"widget.generator.presets.search.long-description": "This is the most basic search experience. The user wants to find a document talking about a specific topic providing as a set of keywords. The user can narrow down the results by filtering and ranking. This is what most search engines do today.",
+	"widget.generator.presets.search.short-description": "Retrieve resources",
+	"widget.generator.presets.search.title": "Search",
+	"widget.generator.presets.search-experience": "Search experience",
+	"widget.generator.presets.widget-location.application": "A specific application or a document repository",
+	"widget.generator.presets.widget-location.public": "A public website",
+	"widget.generator.presets.widget-location.question": "Where will this search widget be located?",
+	"widget.generator.presets.widget-location.title": "Widget location",
 	"widget.generator.preview": "Preview",
 	"widget.generator.private-kb-warning.description": "If the Knowledge Box content is meant to be public, you can publish it from the",
 	"widget.generator.private-kb-warning.link": "home page",
