--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -896,8 +896,36 @@
 	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Coincidencia de sinónimos en búsqueda difusa. No se puede utilizar con la opción \"Relaciones\".",
 	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Coincidencia de sinónimos",
 	"widget.generator.advanced.search-and-filtering-category.title": "Búsqueda y filtrado",
+	"widget.generator.advanced.selected-preset.edited": "(editado)",
+	"widget.generator.advanced.selected-preset.label": "Preajuste actual:",
 	"widget.generator.configuration": "Configuracion de Widget",
 	"widget.generator.page-title": "Configuracion de Widget",
+	"widget.generator.presets.ask.long-description": "Esta es la modalidad popularizada por ChatGPT, donde el usuario hace una pregunta y obtiene una respuesta. El sistema aprovecha los resultados de búsqueda de la experiencia \"Encontrar\" para crear un contexto coherente que será utilizado por un modelo de lenguaje grande para generar la respuesta. El usuario puede hacer preguntas de seguimiento para obtener más información.",
+	"widget.generator.presets.ask.short-description": "Obtener una respuesta",
+	"widget.generator.presets.ask.title": "Preguntar",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "La respuesta y los resultados de búsqueda relacionados.",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Solo la respuesta",
+	"widget.generator.presets.ask.what-to-show.question": "¿Qué quieres mostrar?",
+	"widget.generator.presets.ask.what-to-show.title": "Salida de respuesta",
+	"widget.generator.presets.copilot.create-copilot-button": "Crear un copiloto IA",
+	"widget.generator.presets.copilot.description": "Un agente LLM, también llamado copiloto de IA, no sólo debe ser capaz de interactuar con un usuario a través de una conversación similar a la humana, sino también de comportarse de acuerdo con un objetivo determinado. Su tono, su estilo, su vocabulario, su dominio de especialización o incluso sus opiniones se verán afectados.",
+	"widget.generator.presets.copilot.question": "¿Quiere definir un Copiloto AI?",
+	"widget.generator.presets.copilot.title": "Copiloto de IA",
+	"widget.generator.presets.description": "Seleccione uno de los ajustes preestablecidos o personalice el suyo propio en la pestaña \"Avanzado\".",
+	"widget.generator.presets.discover.long-description": "En esta experiencia, el usuario no sabe lo que quiere encontrar. Quieren explorar un tema y descubrir información relacionada. El descubrimiento muestra conocimientos, información, datos y fuentes relacionados utilizando técnicas de gráficos.",
+	"widget.generator.presets.discover.short-description": "Explorar un corpus",
+	"widget.generator.presets.discover.title": "Descubrir (beta)",
+	"widget.generator.presets.find.long-description": "En esta experiencia, el usuario busca una información específica dentro de un recurso o documento. Esto requiere devolver el bloque de texto donde se encuentra la información. Esta experiencia se suma a la experiencia de búsqueda estándar descrita anteriormente, pero también implicará una búsqueda semántica. El usuario puede explicar lo que busca en lenguaje natural y el sistema intentará comprender su intención y encontrar la información relevante.",
+	"widget.generator.presets.find.short-description": "Encuentre información exacta en un corpus grande.",
+	"widget.generator.presets.find.title": "Encontrar",
+	"widget.generator.presets.search.long-description": "Esta es la experiencia de búsqueda más básica. El usuario desea encontrar un documento que hable sobre un tema específico proporcionando un conjunto de palabras clave. El usuario puede limitar los resultados filtrando y clasificando. Esto es lo que hacen la mayoría de los motores de búsqueda hoy en día.",
+	"widget.generator.presets.search.short-description": "Recuperar recursos",
+	"widget.generator.presets.search.title": "Buscar",
+	"widget.generator.presets.search-experience": "Experiencia de búsqueda",
+	"widget.generator.presets.widget-location.application": "Una aplicación específica o un repositorio de documentos",
+	"widget.generator.presets.widget-location.public": "Un sitio web público",
+	"widget.generator.presets.widget-location.question": "¿Dónde se ubicará este widget de búsqueda?",
+	"widget.generator.presets.widget-location.title": "Ubicación del widget",
 	"widget.generator.preview": "Previsualizar",
 	"widget.generator.private-kb-warning.description": "Si el contenido de Knowledge Box está destinado a ser público, puede publicarlo desde la",
 	"widget.generator.private-kb-warning.link": "Página de inicio",
@@ -907,6 +935,6 @@
 	"widget.generator.publish_kb_link": "Tablero",
 	"widget.generator.snippet": "Fragmento de código",
 	"widget.generator.tabs.advanced": "Avanzado",
-	"widget.generator.tabs.presets": "Preselecciones",
+	"widget.generator.tabs.presets": "Preajustes",
 	"widget.show-api": "Mostrar punto final de API"
 }
