--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -897,8 +897,36 @@
 	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Faites correspondre les synonymes dans la recherche floue. Il n'est pas utilisable avec l'option \"Relations\".",
 	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Faire correspondre les synonymes",
 	"widget.generator.advanced.search-and-filtering-category.title": "Recherche et filtrage",
+	"widget.generator.advanced.selected-preset.edited": "(édité)",
+	"widget.generator.advanced.selected-preset.label": "Préconfiguration actuelle:",
 	"widget.generator.configuration": "Configuration du widget",
 	"widget.generator.page-title": "Configuration du widget",
+	"widget.generator.presets.ask.long-description": "Il s'agit de la modalité rendue populaire par ChatGPT, où l'utilisateur pose une question et obtient une réponse. Le système exploite les résultats de recherche de l'expérience « Trouver » pour créer un contexte cohérent qui sera utilisé par un grand modèle de langage pour générer la réponse. L'utilisateur peut poser des questions complémentaires pour obtenir plus d'informations.",
+	"widget.generator.presets.ask.short-description": "Obtenir une réponse",
+	"widget.generator.presets.ask.title": "Demander",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "La réponse et les résultats de recherche associés",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Seulement la réponse",
+	"widget.generator.presets.ask.what-to-show.question": "Que voulez-vous montrer ?",
+	"widget.generator.presets.ask.what-to-show.title": "Sortie de réponse",
+	"widget.generator.presets.copilot.create-copilot-button": "Créer un copilote IA",
+	"widget.generator.presets.copilot.description": "Un agent LLM – également appelé copilote IA – est censé non seulement pouvoir converser avec un utilisateur comme le ferait un humain, mais également se comporter selon un objectif donné. Elle impactera son ton, son style, son vocabulaire, son domaine d'expertise, ou encore ses opinions.",
+	"widget.generator.presets.copilot.question": "Voulez-vous définir un copilote IA ?",
+	"widget.generator.presets.copilot.title": "Copilote IA",
+	"widget.generator.presets.description": "Sélectionnez l'un des préréglages ou personnalisez le vôtre dans l'onglet \"Avancé\".",
+	"widget.generator.presets.discover.long-description": "Dans cette expérience, l’utilisateur ne sait pas ce qu’il veut trouver. Ils souhaitent explorer un sujet et découvrir des informations connexes. La découverte fait apparaître des éléments de connaissances, d'informations, de données et de sources liés à l'aide de techniques graphiques.",
+	"widget.generator.presets.discover.short-description": "Explorer un corpus",
+	"widget.generator.presets.discover.title": "Découvrir (beta)",
+	"widget.generator.presets.find.long-description": "Dans cette expérience, l'utilisateur recherche une information spécifique dans une ressource ou un document. Cela nécessite de renvoyer le bloc de texte où se trouve l'information. Cette expérience s'ajoute à l'expérience de recherche standard décrite ci-dessus, mais impliquera également une recherche sémantique. L'utilisateur peut expliquer ce qu'il recherche en langage naturel, et le système essaiera de comprendre son intention et de trouver les informations pertinentes.",
+	"widget.generator.presets.find.short-description": "Trouver des informations exactes dans un grand corpus",
+	"widget.generator.presets.find.title": "Trouver",
+	"widget.generator.presets.search.long-description": "Il s'agit de l'expérience de recherche la plus élémentaire. L'utilisateur souhaite trouver un document traitant d'un sujet spécifique en fournissant un ensemble de mots-clés. L'utilisateur peut affiner les résultats en filtrant et en classant. C’est ce que font aujourd’hui la plupart des moteurs de recherche.",
+	"widget.generator.presets.search.short-description": "Récupérer des ressources",
+	"widget.generator.presets.search.title": "Chercher",
+	"widget.generator.presets.search-experience": "Expérience de recherche",
+	"widget.generator.presets.widget-location.application": "Une application spécifique ou un référentiel de documents",
+	"widget.generator.presets.widget-location.public": "Un site Web public",
+	"widget.generator.presets.widget-location.question": "Où sera situé ce widget de recherche ?",
+	"widget.generator.presets.widget-location.title": "Emplacement du widget",
 	"widget.generator.preview": "Aperçu",
 	"widget.generator.private-kb-warning.description": "Si le contenu de la Knowledge Box est destiné à être public, vous pouvez le publier à partir du",
 	"widget.generator.private-kb-warning.link": "Page d'accueil",
@@ -908,6 +936,6 @@
 	"widget.generator.publish_kb_link": "Tableau de bord",
 	"widget.generator.snippet": "Extrait de code",
 	"widget.generator.tabs.advanced": "Avancé",
-	"widget.generator.tabs.presets": "Préconfigurations",
+	"widget.generator.tabs.presets": "Préréglages",
 	"widget.show-api": "Afficher le point de terminaison de l'API"
 }
