--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -897,8 +897,36 @@
 	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Combine sinônimos na pesquisa difusa. Não pode ser utilizado com a opção \"Relações\".",
 	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Combine sinônimos",
 	"widget.generator.advanced.search-and-filtering-category.title": "Pesquisa e filtragem",
+	"widget.generator.advanced.selected-preset.edited": "(editado)",
+	"widget.generator.advanced.selected-preset.label": "Predefinição atual:",
 	"widget.generator.configuration": "Configuração de widget",
 	"widget.generator.page-title": "Configuração de widget",
+	"widget.generator.presets.ask.long-description": "Essa é a modalidade popularizada pelo ChatGPT, onde o usuário faz uma pergunta e obtém uma resposta. O sistema aproveita os resultados da pesquisa da experiência \"Encontrar\" para construir um contexto consistente que será usado por um grande modelo de linguagem para gerar a resposta. O usuário pode fazer perguntas de acompanhamento para obter mais informações.",
+	"widget.generator.presets.ask.short-description": "Obtenha uma resposta",
+	"widget.generator.presets.ask.title": "Preguntar",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "A resposta e os resultados de pesquisa relacionados",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Somente a resposta",
+	"widget.generator.presets.ask.what-to-show.question": "O que você quer mostrar?",
+	"widget.generator.presets.ask.what-to-show.title": "Saída de resposta",
+	"widget.generator.presets.copilot.create-copilot-button": "Criar um copiloto de IA",
+	"widget.generator.presets.copilot.description": "Um agente LLM – também designado copiloto de IA – deve não só ser capaz de interagir com um utilizador através de uma conversa semelhante à humana, mas também comportar-se de acordo com um determinado objetivo. O seu tom de voz, o seu estilo, o seu vocabulário, o seu domínio de especialização ou mesmo as suas opiniões terão impacto.",
+	"widget.generator.presets.copilot.question": "Pretende definir um copiloto de IA?",
+	"widget.generator.presets.copilot.title": "Copiloto de IA",
+	"widget.generator.presets.description": "Selecione uma das predefinições ou personalize a sua própria na guia “Avançado”.",
+	"widget.generator.presets.discover.long-description": "Nesta experiência, o usuário não sabe o que quer encontrar. Eles querem explorar um tópico e descobrir informações relacionadas. A descoberta revela peças de conhecimento, informações, dados e fontes relacionadas usando técnicas gráficas.",
+	"widget.generator.presets.discover.short-description": "Explorar um corpus",
+	"widget.generator.presets.discover.title": "Descobrir (beta)",
+	"widget.generator.presets.find.long-description": "Nessa experiência, o usuário busca uma informação específica dentro de um recurso ou documento. Isso requer o retorno do bloco de texto onde a informação foi encontrada. Essa experiência se complementa à experiência de pesquisa padrão descrita acima, mas também envolverá pesquisa semântica. O usuário pode explicar o que procura em linguagem natural, e o sistema tentará entender sua intenção e encontrar as informações relevantes.",
+	"widget.generator.presets.find.short-description": "Encontre informações exatas em um grande corpus",
+	"widget.generator.presets.find.title": "Encontrar",
+	"widget.generator.presets.search.long-description": "Esta é a experiência de pesquisa mais básica. O usuário deseja encontrar um documento que fale sobre um tema específico fornecendo um conjunto de palavras-chave. O usuário pode restringir os resultados filtrando e classificando. Isso é o que a maioria dos mecanismos de pesquisa fazem hoje.",
+	"widget.generator.presets.search.short-description": "Recuperar recursos",
+	"widget.generator.presets.search.title": "Procurar",
+	"widget.generator.presets.search-experience": "Experiência de pesquisa",
+	"widget.generator.presets.widget-location.application": "Um aplicativo específico ou repositório de documentos",
+	"widget.generator.presets.widget-location.public": "Um site público",
+	"widget.generator.presets.widget-location.question": "Onde esse widget de pesquisa estará localizado?",
+	"widget.generator.presets.widget-location.title": "Localização do widget",
 	"widget.generator.preview": "Visualizar",
 	"widget.generator.private-kb-warning.description": "Se o conteúdo da Caixa de conhecimento for público, você poderá publicá-lo no",
 	"widget.generator.private-kb-warning.link": "Página Inicial",
@@ -908,6 +936,6 @@
 	"widget.generator.publish_kb_link": "Painel de controle",
 	"widget.generator.snippet": "Fragmento de código",
 	"widget.generator.tabs.advanced": "Avançado",
-	"widget.generator.tabs.presets": "Pré-seleções",
+	"widget.generator.tabs.presets": "Predefinições",
 	"widget.show-api": "Mostrar ponto de extremidade da API"
 }
